Fix tab so it doesn't affect spacing of other sidebar elements

--- a/assets/css/_route_picker.scss
+++ b/assets/css/_route_picker.scss
@@ -25,9 +25,9 @@
   background-color: $light-periwinkle;
   border-top-right-radius: 1rem;
   border-bottom-right-radius: 1rem;
-  left: 8.5rem;
+  left: 9.5rem;
   padding: 1.5rem 0.3rem;
-  position: relative;
+  position: absolute;
   top: 1.625rem;
   width: fit-content;
 }
